import React from 'react';
import renderer from 'react-test-renderer';
import { ThemeProvider } from 'styled-components';
import { defaultTheme } from '@sinoui/theme';
import '@testing-library/jest-dom/extend-expect';
import Button from './Button';

it('正确渲染三种形式按钮', () => {
  const tree = renderer.create(
    <ThemeProvider theme={defaultTheme}>
      <>
        <Button>文本按钮</Button>
        <Button outlined>轮廓按钮</Button>
        <Button raised>容器按钮</Button>
      </>
    </ThemeProvider>,
  );

  expect(tree).toMatchSnapshot();
});

it('渲染不可用状态下的三种形式按钮', () => {
  const tree = renderer.create(
    <ThemeProvider theme={defaultTheme}>
      <>
        <Button disabled>文本按钮</Button>
        <Button disabled outlined>
          轮廓按钮
        </Button>
        <Button disabled raised>
          容器按钮
        </Button>
      </>
    </ThemeProvider>,
  );

  expect(tree).toMatchSnapshot();
});

it('渲染带图标按钮', () => {
  const tree = renderer.create(
    <ThemeProvider theme={defaultTheme}>
      <>
        <Button>
          <svg height="24" viewBox="0 0 24 24" width="24">
            <path
              fill="currentColor"
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
          icon
        </Button>
        <Button outlined>
          <svg height="24" viewBox="0 0 24 24" width="24">
            <path
              fill="currentColor"
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
          icon
        </Button>
        <Button raised>
          <svg height="24" viewBox="0 0 24 24" width="24">
            <path
              fill="currentColor"
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
          icon
        </Button>
      </>
    </ThemeProvider>,
  );

  expect(tree).toMatchSnapshot();
});
